--- a/shippable.yml
+++ b/shippable.yml
@@ -11,6 +11,7 @@ build:
     pull: true
     
   ci:
+     - printenv
      - ps aux
      - ps aux | grep [c]ouchdb | grep -v shippable_service | awk '{print $2}'
      - kill -9 $(ps aux | grep [c]ouchdb | grep -v shippable_service | awk '{print $2}')
