--- a/shippable.yml
+++ b/shippable.yml
@@ -9,10 +9,8 @@ build:
     image_name: drydock/c7all
     image_tag: master
     pull: true
+    options: -v $SHIPPABLE_REPO_DIR/couchdb.sh:/usr/local/bin/shippable_services/couchdb.sh
     
   ci:
-     - printenv
      - ps aux
      - ps aux | grep [c]ouchdb | grep -v shippable_service | awk '{print $2}'
-     - kill -9 $(ps aux | grep [c]ouchdb | grep -v shippable_service | awk '{print $2}')
-
