--- a/shippable.yml
+++ b/shippable.yml
@@ -9,8 +9,9 @@ build:
     image_name: drydock/c7all
     image_tag: master
     pull: true
-    options: -v couchdb.sh:/usr/local/bin/shippable_services/couchdb.sh
+    
     
   ci:
+     - cp -rf $SHIPPABLE_REPO_DIR/couchdb.sh /usr/local/bin/shippable_services/couchdb.sh
      - ps aux
      - ps aux | grep [c]ouchdb | grep -v shippable_service | awk '{print $2}'
