--- a/shippable.yml
+++ b/shippable.yml
@@ -1,7 +1,7 @@
 language: none
 
 services:
-   - cassandra 
+   - couchdb 
 
 
 build:
@@ -12,4 +12,4 @@ build:
     
     
   ci:
-    - cassandra -v
+    - ls
