--- a/shippable.yml
+++ b/shippable.yml
@@ -1,7 +1,7 @@
 language: none
 
 services:
-   - couchdb 
+   - elasticsearch 
 
 
 build:
@@ -12,4 +12,5 @@ build:
     
     
   ci:
-    - curl http://127.0.0.1:5984
+    - elasticsearch --version
+    - gosu --version
