--- a/shippable.yml
+++ b/shippable.yml
@@ -1,7 +1,7 @@
 language: none
 
 services:
-   - cassandra
+   - couchbd
 
 
 build:
@@ -12,4 +12,4 @@ build:
     
     
   ci:
-    - cassandra -v
+    - curl http://127.0.0.1:5984
