--- a/shippable.yml
+++ b/shippable.yml
@@ -1,7 +1,7 @@
 language: none
 
 services:
-   - couchbd
+   - elasticsearch
 
 
 build:
@@ -12,7 +12,4 @@ build:
     
     
   ci:
-    - service couchdb start
-    - sleep 5
-    - curl http://127.0.0.1:5984
-    - ls
+     - elasticsearch --version
