--- a/shippable.yml
+++ b/shippable.yml
@@ -1,7 +1,7 @@
 language: none
 
 services:
-    - mongodb
+    - mysql
 
 
 build:
@@ -12,4 +12,4 @@ build:
     
     
   ci:
-      - mongod --version
+      - mysql --version
