--- a/shippable.yml
+++ b/shippable.yml
@@ -1,7 +1,7 @@
 language: none
 
 services:
-    - neo4j 
+    - rabbitmq 
 
 
 build:
@@ -12,4 +12,4 @@ build:
     
     
   ci:
-     - /var/lib/neo4j/bin/neo4j version
+     - dpkg -s rabbitmq-server | grep Version
