--- a/shippable.yml
+++ b/shippable.yml
@@ -1,7 +1,7 @@
 language: none
 
 services:
-    - rabbitmq 
+    - riak 
 
 
 build:
@@ -12,4 +12,4 @@ build:
     
     
   ci:
-     - dpkg -s rabbitmq-server | grep Version
+     - riak version
